--- a/main.tex
+++ b/main.tex
@@ -8,30 +8,19 @@
 \usepackage{xcolor}
 \usepackage{float}
 \usepackage{csquotes}
+\usepackage{hyperref}
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Machine Learning-based Spatial Modeling of Sentiment Towards COVID-19\\}
+\title{Machine Learning-based Spatial Modeling of Sentiment Towards COVID-19}
 
-\author{\IEEEauthorblockN{1\textsuperscript{st} Yangxiao Bai}
-\IEEEauthorblockA{\textit{Dept. Computer Science} \\
+\author{\IEEEauthorblockN{Yangxiao Bai, Abir Mohammad Hadi, Youngsun Jang, Kaiqun Fu}
+\IEEEauthorblockA{\textit{Department of Electrical Engineering and Computer Science} \\
 \textit{South Dakota State University}\\
-Brookings, South Dakota \\
-bai.yangxiao@sdstate.edu}
-\and
-\IEEEauthorblockN{2\textsuperscript{nd} Abir Mohammad Hadi}
-\IEEEauthorblockA{\textit{Dept. Computer Science} \\
-\textit{South Dakota State University}\\
-Brookings, South Dakota \\
-abirmohammad.hadi@sdstate.edu}
-\and
-\IEEEauthorblockN{3\textsuperscript{rd} Youngsun Jang}
-\IEEEauthorblockA{\textit{Dept. Computer Science} \\
-\textit{South Dakota State University}\\
-Brookings, South Dakota \\
-youngsun.jang@sdstate.edu}
+Brookings, South Dakota\\
+{bai.yangxiao,abirmohammad.hadi,youngsun.jang,kaiqun.fu}@sdstate.edu}
 }
 
 \maketitle
