--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -6,17 +6,17 @@ such news events. In case of pandemic, this will provide a reference for the
 development of epidemic prevention measures and evaluation. As for such
 sentiment analysis several approaches have been done, and some previous
 studies accomplished success by using machine learning technique. Kastrat el
-al.(2021)~\cite{kastrati2021deep} used a deep learning based sentiment analyser called ALBANA is
-proposed and validated on the collected and curated COVID-19 dataset. They
-apply an attention mechanism to characterize the word level interactions
-within a local and global context to capture the semantic meaning of words.
-Among other logical approaches, there is a study~\cite{chakraborty2020sentiment} proposes the
-implementation of fuzzy logic for taming the fuzziness of sentiments. As
-fuzzy sets are ideally suited to counter the ambiguities in life, the authors
-have proposed the initial integration of fuzzy logic in effectively handling
-the sentiment identification of tweets (Chakraborty et al., 2020). This
-approach provides ideas for a more precise study of emotional factors in
-texts.
+al.(2021)~\cite{kastrati2021deep} used a deep learning based sentiment
+analyser called ALBANA is proposed and validated on the collected and curated
+COVID-19 dataset. They apply an attention mechanism to characterize the word
+level interactions within a local and global context to capture the semantic
+meaning of words. Among other logical approaches, there is a study~\cite
+{chakraborty2020sentiment} proposes the implementation of fuzzy logic for
+taming the fuzziness of sentiments. As fuzzy sets are ideally suited to
+counter the ambiguities in life, the authors have proposed the initial
+integration of fuzzy logic in effectively handling the sentiment
+identification of tweets (Chakraborty et al., 2020). This approach provides
+ideas for a more precise study of emotional factors in texts.
 
 In order to more accurately study and even predict the changing trend of
 people’s thinking to the epidemic, we use a machine learning and deep
