--- a/sections/method.tex
+++ b/sections/method.tex
@@ -105,12 +105,12 @@ Some tweet contains hypertext URL such as:
 \begin{verbatim}
     https://t.co/{tweet_id}
 \end{verbatim} and some other URLs as shown in (Fig.4):
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\textwidth]{url.JPG}
-    \caption{An example of Tweet containing URL}
-    \label{fig:tw_url}
-\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includegraphics[width=0.5\textwidth]{url.JPG}
+%     \caption{An example of Tweet containing URL}
+%     \label{fig:tw_url}
+% \end{figure}
     
 We needed to filter these unnecessary texts from the actual twitter data using
 some regular expression operator and cleaning the part that corresponds to
