Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 \IEEEauthorblockA{\textit{Department of Electrical Engineering and Computer Science} \\
 \textit{South Dakota State University}\\
 Brookings, South Dakota\\
-{bai.yangxiao,abirmohammad.hadi,youngsun.jang,kaiqun.fu}@sdstate.edu}
+\{bai.yangxiao,abirmohammad.hadi,youngsun.jang,kaiqun.fu\}@sdstate.edu}
 }
 
 \maketitle
