--- a/sections/method.tex
+++ b/sections/method.tex
@@ -60,7 +60,7 @@ subjects.
 
 \subsubsection{Tweet Data structure}
 The original data contains tweets ID and sentiment score calculated by
-database publisher (Fig.2). We use tweets ID to request twitter API in batch
+database publisher Figure~\ref{fig:Research process}. We use tweets ID to request twitter API in batch
 and get completed information, including content, UTC time, geographic
 location. All of these information are fully imported into the server after
 splicing with sentiment score.  In this process, we will transfer the
