--- a/references.bib
+++ b/references.bib
@@ -18,3 +18,267 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@inproceedings{arun2020analysis,
+  title={On the analysis of COVID19-novel corona viral disease pandemic spread data using machine learning techniques},
+  author={Arun, Shreyas Setlur and Iyer, Ganesh Neelakanta},
+  booktitle={2020 4th International Conference on Intelligent Computing and Control Systems (ICICCS)},
+  pages={1222--1227},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{batool2013precise,
+  title={Precise tweet classification and sentiment analysis},
+  author={Batool, Rabia and Khattak, Asad Masood and Maqbool, Jahanzeb and Lee, Sungyoung},
+  booktitle={2013 IEEE/ACIS 12th International Conference on Computer and Information Science (ICIS)},
+  pages={461--466},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{hara2015behaviour,
+  title={Behaviour analysis using tweet data and geo-tag data in a natural disaster},
+  author={Hara, Yusuke},
+  journal={Transportation Research Procedia},
+  volume={11},
+  pages={399--412},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{ngamassi2022text,
+  title={Text mining hurricane harvey tweet data: Lessons learned and policy recommendations},
+  author={Ngamassi, Louis and Shahriari, Hesam and Ramakrishnan, Thiagarajan and Rahman, Shahedur},
+  journal={International Journal of Disaster Risk Reduction},
+  volume={70},
+  pages={102753},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@incollection{chowdhury2019sentiment,
+  title={Sentiment Analysis of Tweet Data: The Study of Sentimental State of Human from Tweet Text},
+  author={Chowdhury, SM and Ghosh, Priyanka and Abujar, Sheikh and Afrin, Arina and Akhter Hossain, Syed and others},
+  booktitle={Emerging Technologies in Data Mining and Information Security},
+  pages={3--14},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{kastrati2021deep,
+  title={A deep learning sentiment analyser for social media comments in low-resource languages},
+  author={Kastrati, Zenun and Ahmedi, Lule and Kurti, Arianit and Kadriu, Fatbardh and Murtezaj, Doruntina and Gashi, Fatbardh},
+  journal={Electronics},
+  volume={10},
+  number={10},
+  pages={1133},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{chakraborty2020sentiment,
+  title={Sentiment Analysis of COVID-19 tweets by Deep Learning Classifiers—A study to show how popularity is affecting accuracy in social media},
+  author={Chakraborty, Koyel and Bhatia, Surbhi and Bhattacharyya, Siddhartha and Platos, Jan and Bag, Rajib and Hassanien, Aboul Ella},
+  journal={Applied Soft Computing},
+  volume={97},
+  pages={106754},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{jalil2021covid,
+  title={Covid-19 related sentiment analysis using state-of-the-art machine learning and deep learning techniques},
+  author={Jalil, Zunera and Abbasi, Ahmed and Javed, Abdul Rehman and Khan, Muhammad Badruddin and Hasanat, Mozaherul Hoque Abul and Malik, Khalid Mahmood and Saudagar, Abdul Khader Jilani},
+  journal={Frontiers in Public Health},
+  volume={9},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{chintalapudi2021sentimental,
+  title={Sentimental analysis of COVID-19 tweets using deep learning models},
+  author={Chintalapudi, Nalini and Battineni, Gopi and Amenta, Francesco},
+  journal={Infectious Disease Reports},
+  volume={13},
+  number={2},
+  pages={329--339},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{alshalan2020detection,
+  title={Detection of hate speech in covid-19--related tweets in the arab region: Deep learning and topic modeling approach},
+  author={Alshalan, Raghad and Al-Khalifa, Hend and Alsaeed, Duaa and Al-Baity, Heyam and Alshalan, Shahad and others},
+  journal={Journal of medical Internet research},
+  volume={22},
+  number={12},
+  pages={e22609},
+  year={2020},
+  publisher={JMIR Publications Inc., Toronto, Canada}
+}
+
+@article{abdelminaam2021coaid,
+  title={CoAID-DEEP: an optimized intelligent framework for automated detecting COVID-19 misleading information on Twitter},
+  author={Abdelminaam, Diaa Salama and Ismail, Fatma Helmy and Taha, Mohamed and Taha, Ahmed and Houssein, Essam H and Nabil, Ayman},
+  journal={Ieee Access},
+  volume={9},
+  pages={27840--27867},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{signorini2011use,
+  title={The use of Twitter to track levels of disease activity and public concern in the US during the influenza A H1N1 pandemic},
+  author={Signorini, Alessio and Segre, Alberto Maria and Polgreen, Philip M},
+  journal={PloS one},
+  volume={6},
+  number={5},
+  pages={e19467},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{alamoodi2021sentiment,
+  title={Sentiment analysis and its applications in fighting COVID-19 and infectious diseases: A systematic review},
+  author={Alamoodi, AH and Zaidan, Bilal Bahaa and Zaidan, Aws Alaa and Albahri, Osamah Shihab and Mohammed, KI and Malik, Rami Qays and Almahdi, EM and Chyad, MA and Tareq, Zaidoon and Albahri, Ahmed Shihab and others},
+  journal={Expert systems with applications},
+  volume={167},
+  pages={114155},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@inproceedings{zhao2015simnest,
+  title={Simnest: Social media nested epidemic simulation via online semi-supervised deep learning},
+  author={Zhao, Liang and Chen, Jiangzhuo and Chen, Feng and Wang, Wei and Lu, Chang-Tien and Ramakrishnan, Naren},
+  booktitle={2015 IEEE international conference on data mining},
+  pages={639--648},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{basiri2021novel,
+  title={A novel fusion-based deep learning model for sentiment analysis of COVID-19 tweets},
+  author={Basiri, Mohammad Ehsan and Nemati, Shahla and Abdar, Moloud and Asadi, Somayeh and Acharrya, U Rajendra},
+  journal={Knowledge-Based Systems},
+  volume={228},
+  pages={107242},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@inproceedings{cataldi2010emerging,
+  title={Emerging topic detection on twitter based on temporal and social terms evaluation},
+  author={Cataldi, Mario and Di Caro, Luigi and Schifanella, Claudio},
+  booktitle={Proceedings of the tenth international workshop on multimedia data mining},
+  pages={1--10},
+  year={2010}
+}
+
+@inproceedings{xie2016unsupervised,
+  title={Unsupervised deep embedding for clustering analysis},
+  author={Xie, Junyuan and Girshick, Ross and Farhadi, Ali},
+  booktitle={International conference on machine learning},
+  pages={478--487},
+  year={2016},
+  organization={PMLR}
+}
+
+@article{abd2020top,
+  title={Top concerns of tweeters during the COVID-19 pandemic: infoveillance study},
+  author={Abd-Alrazaq, Alaa and Alhuwail, Dari and Househ, Mowafa and Hamdi, Mounir and Shah, Zubair and others},
+  journal={Journal of medical Internet research},
+  volume={22},
+  number={4},
+  pages={e19016},
+  year={2020},
+  publisher={JMIR Publications Inc., Toronto, Canada}
+}
+
+@inproceedings{nishida2011tweet,
+  title={Tweet classification by data compression},
+  author={Nishida, Kyosuke and Banno, Ryohei and Fujimura, Ko and Hoshide, Takahide},
+  booktitle={Proceedings of the 2011 international workshop on DETecting and Exploiting Cultural diversiTy on the social web},
+  pages={29--34},
+  year={2011}
+}
+
+@article{gencoglu2020large,
+  title={Large-scale, language-agnostic discourse classification of tweets during COVID-19},
+  author={Gencoglu, Oguzhan},
+  journal={Machine Learning and Knowledge Extraction},
+  volume={2},
+  number={4},
+  pages={603--616},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{satu2021tclustvid,
+  title={TClustVID: A novel machine learning classification model to investigate topics and sentiment in COVID-19 tweets},
+  author={Satu, Md Shahriare and Khan, Md Imran and Mahmud, Mufti and Uddin, Shahadat and Summers, Matthew A and Quinn, Julian MW and Moni, Mohammad Ali},
+  journal={Knowledge-Based Systems},
+  volume={226},
+  pages={107126},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{wieczorek2020neural,
+  title={Neural network powered COVID-19 spread forecasting model},
+  author={Wieczorek, Micha{\l} and Si{\l}ka, Jakub and Wo{\'z}niak, Marcin},
+  journal={Chaos, Solitons \& Fractals},
+  volume={140},
+  pages={110203},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@inproceedings{wang2019defsi,
+  title={DEFSI: Deep learning based epidemic forecasting with synthetic information},
+  author={Wang, Lijing and Chen, Jiangzhuo and Marathe, Madhav},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={33},
+  number={01},
+  pages={9607--9612},
+  year={2019}
+}
+
+@article{abdulaziz2021topic,
+  title={Topic based Sentiment Analysis for COVID-19 Tweets},
+  author={Abdulaziz, Manal and Alotaibi, Alanoud and Alsolamy, Mashail and Alabbas, Abeer},
+  journal={Article in International Journal of Advanced Computer Science and Applications},
+  volume={12},
+  pages={626--636},
+  year={2021}
+}
+
+@inproceedings{paul2017compass,
+  title={Compass: Spatio temporal sentiment analysis of US election what twitter says!},
+  author={Paul, Debjyoti and Li, Feifei and Teja, Murali Krishna and Yu, Xin and Frost, Richie},
+  booktitle={Proceedings of the 23rd ACM SIGKDD international conference on knowledge discovery and data mining},
+  pages={1585--1594},
+  year={2017}
+}
+
+@inproceedings{pran2020analysis,
+  title={Analysis of Bangladeshi People's Emotion during Covid-19 In Social Media Using Deep Learning},
+  author={Pran, Md Sabbir Alam and Bhuiyan, Md Rafiuzzaman and Hossain, Syed Akhter and Abujar, Sheikh},
+  booktitle={2020 11th International Conference on Computing, Communication and Networking Technologies (ICCCNT)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{cooper2020sir,
+  title={A SIR model assumption for the spread of COVID-19 in different communities},
+  author={Cooper, Ian and Mondal, Argha and Antonopoulos, Chris G},
+  journal={Chaos, Solitons \& Fractals},
+  volume={139},
+  pages={110057},
+  year={2020},
+  publisher={Elsevier}
+}
+
+
