--- a/sections/discussion.tex
+++ b/sections/discussion.tex
@@ -17,14 +17,12 @@ conclusive argument which is visualized using the visualization technique. In
 this project, we have used Geo Pandas to visualize our spatial data using
 designated spatial operator. In our future studies, we would like to make the
 model propose the trends in spatial data flow in maps which can be visualized
-using the similar libraries.\\
-
+using the similar libraries.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/Research_Process.png}
-\caption{\label{fig:Research process}Future plan}
+\caption{\label{fig:Future plan}Future plan}
 \end{figure}
-
 However it still has a long way to go in that it is too simple for disclosing
 some deeply meaningful implications. At present, since our model just
 provides the spatio-temporal view of the public opinion about an issue, it
@@ -50,4 +48,4 @@ One promising candidate for the model is the Transformer. This is a greatly
 applied model architecture in Natural Language Processing now, which is based
 on the core technology called the \textit{attention mechanism}. Our team
 belive this should be an appropriate alternative current LDA to do the
-detailed topic clustering task (Fig.21). 
+detailed topic clustering task (Figure~\ref{fig:future_plan}). 
