--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -10,8 +10,7 @@ al.(2021)~\cite{kastrati2021deep} used a deep learning based sentiment
 analyser called ALBANA is proposed and validated on the collected and curated
 COVID-19 dataset. They apply an attention mechanism to characterize the word
 level interactions within a local and global context to capture the semantic
-meaning of words. Among other logical approaches, there is a study~\cite
-{chakraborty2020sentiment} proposes the implementation of fuzzy logic for
+meaning of words. Among other logical approaches, there is a study~\cite{chakraborty2020sentiment} proposes the implementation of fuzzy logic for
 taming the fuzziness of sentiments. As fuzzy sets are ideally suited to
 counter the ambiguities in life, the authors have proposed the initial
 integration of fuzzy logic in effectively handling the sentiment
@@ -24,14 +23,12 @@ learning model to analyze the sentiment scores of tweets. We develop a binary
 classifier peoples' sentiment into positive and negative classes. 
 
 Beyond the classification, such Machine Learning or Deep Learning-based
-approaches have been tried in many studies. [11] used a Bidirectional
+approaches have been tried in many studies. ~\cite{chintalapudi2021sentimental} used a Bidirectional
 Transformer based model to analyze sentiments of Indian citizens and compare
 the results with existing models. Weighting sentiments between a negative and
-positive perspective from the social media posts has been suggested by
-[12] who used CNN-based model to score the sentiment between 0 and 1, 1 being
+positive perspective from the social media posts has been suggested by~\cite{alshalan2020detection} who used CNN-based model to score the sentiment between 0 and 1, 1 being
 the most negative and 0 being the most positive sentiment in text. False news
-spread regarding COVID-19 is a prominent task in epidemic modeling.
-[13] proposed a Modified-LSTM based model to detect fake news regarding
+spread regarding COVID-19 is a prominent task in epidemic modeling.~\cite{abdelminaam2021coaid} proposed a Modified-LSTM based model to detect fake news regarding
 COVID-19 which can used to separate the unintentional biases in a COVID-19
 data stream and learn the meta features of a falsely claimed COVID-19
 sentiment. There is also a study analyzing public response to COVID by
@@ -42,33 +39,32 @@ hashtags as search terms to fetch tweets, Xue et al.(2020) reports several
 significant results that the public uses a variety of terms when referring to
 COVID-19, including virus, COVID-19, coronavirus, and corona virus, and that
 public discussions about the Chinese Communist Party (CCP) and the spread of
-the virus emerged as a new topic that was not identified in previous studies,
-and so on [15]. Alamoodi et al.(2021) provides a valuable review on different
+the virus emerged as a new topic that was not identified in previous studies. Alamoodi et al.(2021) provides a valuable review on different
 studies about sentiment analysis on not only the COVID outbreak but also
 numerous epidemics such as the Ebola, Middle East respiratory syndrome
 (MERS), N1H1 and Zika which are observed for the last several decades in
-human history [16]. For classifying the public sentiment into positive,
+human history~\cite{alamoodi2021sentiment}. For classifying the public sentiment into positive,
 negative and neutral group, Jalil et al.(2022) adopts the natural language
 processing model (NLP) Transformer and its expanded version BERT
 (Bidirectional Encoder Representations from Transformers). Although this
 study is simply focused on classification task on the sentiment analysis, its
 research method hints to our project about the possibility of NLP usage in
-this field [10].
+this field~\cite{jalil2021covid}.
 
 Furthermore, as for the spatio-temporal analysis, specifically on using social
 media to track the spread of infectious disease, it has been a long time
 since some attempts have been made even before COVID19 outbreak. For example,
 there is a study to track disease activity about the notorious influenza H1N1
-and swine flue in 2010s and related public sentiment [14]. It is interesting
+and swine flue in 2010s and related public sentiment~\cite{signorini2011use}. It is interesting
 to note that the tweet data collected is time-stamped and geolocated
-harnessing the user’s selfdeclared home location, since this method can be
-adopted to our project. And [17] proposed a real-time simulated social media
+harnessing the user’s self-declared home location, since this method can be
+adopted to our project. And~\cite{signorini2011use} proposed a real-time simulated social media
 based learning model that utilizes disease progress model to constrain the
-temporal model. [18] used 4-deep neural network model and a classical machine
+temporal model.They~\cite{basiri2021novel} used 4-deep neural network model and a classical machine
 learning model to analyze the sentiment of COVID-19 tweets. A meta learner
 learns to predict from the feature outputs of the presiding models.
 
-Until now, the existing studes have focused primarily on the public's
+Until now, the existing study have focused primarily on the public's
 sentiment analysis related to the pandemic, or used it as a case study to
 verify the performance of specific machine learning or deep learning models.
 There are relatively few studies focused on the pandemic, and very few
