--- a/sections/method.tex
+++ b/sections/method.tex
@@ -1,5 +1,5 @@
-\section{Method and Data}
-From a holistic view of research method (Fig.1), it consists of three
+\section{Method and Data} \label{sec:method_and_data}
+From a holistic view of research method (Figure~\ref{fig:Research Method}), it consists of three
 independent but relational parts of the dataset import, dataset Processing,
 and machine model training for making binary classifier.
 
@@ -12,7 +12,8 @@ stored in the Elasticsearch server.
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/Research_Method.png}
-\caption{\label{fig:Research process}Research Method}
+\caption{Research Method}
+\label{fig:Research Method}
 \end{figure}
 
 In dataset processing step, after importing data into Elasticsearch server in
@@ -60,7 +61,7 @@ subjects.
 
 \subsubsection{Tweet Data structure}
 The original data contains tweets ID and sentiment score calculated by
-database publisher Figure~\ref{fig:Research process}. We use tweets ID to request twitter API in batch
+database publisher Figure~\ref{fig:Tweet dataset}. We use tweets ID to request twitter API in batch
 and get completed information, including content, UTC time, geographic
 location. All of these information are fully imported into the server after
 splicing with sentiment score.  In this process, we will transfer the
@@ -71,11 +72,12 @@ filtering of time will be consistent.
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/row_tweets.png}
-\caption{\label{fig:Research process}Tweet dataset structure}
+\caption{Tweet dataset structure}
+\label{fig:Tweet dataset}
 \end{figure}
 \subsubsection{Tweet Data Pre-processing Method}
 The pre-processing process includes regex filtering, tokenization and tagging,
-removal of stop words (Fig.3). Regex filtering process used to delete some
+removal of stop words (Figure~\ref{fig:Tokenization and tag}). Regex filtering process used to delete some
 proper noun or URL. We can also delete all the hashtag or the emojis. Normal
 phrase or locations can also be a optional. Basically, we will set different
 filtering rules according to the task goals and model requirements. 
@@ -87,7 +89,8 @@ results.
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/tokenization.png}
-\caption{\label{fig:Research process} Tokenization and tag}
+\caption{Tokenization and tag}
+\label{fig:Tokenization and tag}
 \end{figure}
 The purpose of removal of stopwords is to avoid distractions from common words
 on the topic. The nltk package provide a library of stopwords and we can set
@@ -104,7 +107,7 @@ characters, we needed to clean the data.
 Some tweet contains hypertext URL such as: 
 \begin{verbatim}
     https://t.co/{tweet_id}
-\end{verbatim} and some other URLs as shown in (Fig.4):
+\end{verbatim} and some other URLs as shown in (Figure~\ref{fig:Right-most column}):
 % \begin{figure}[H]
 %     \centering
 %     \includegraphics[width=0.5\textwidth]{url.JPG}
@@ -118,11 +121,11 @@ those specific terms. We also needed to remove all the punctuation marks so
 that it drops the redundant and recurring feature that don't contribute to
 the clustering.
 
-Example of these regular expression technique is shown in the (Fig.5): 
+Example of these regular expression technique is shown in the (Figure~\ref{fig:Shows the conceptual}): 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{imgs/cleaning_w_regex.png}
-    \caption{Right-most column showing cleaned text with Regex.}
+    \caption{\label{fig:Right-most column}Right-most column showing cleaned text with Regex}
     \label{fig:regex}
 \end{figure}
 After cleaning the data, it was added as a new column in the data frame. The
@@ -143,17 +146,17 @@ distribution of possible terms (words).
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/topic_clusters.png}
-\caption{\label{fig:Research process} Shows the conceptual document space and topic clusters}
+\caption{\label{fig:Shows the conceptual} Shows the conceptual document space and topic clusters}
 \end{figure}
-The size of the circle in (Fig.6) determines the number of documents that
+The size of the circle in (Figure~\ref{fig:Shows the conceptual2}) determines the number of documents that
 correspond to the number of clusters. For example, Cluster 4 shaded in blue
 has more documents correspondence than Cluster 3.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/term_clusters.png}
-\caption{\label{fig:Research process} Shows the conceptual topic space and term clusters}
+\caption{\label{fig:Shows the conceptual2} Shows the conceptual topic space and term clusters}
 \end{figure}
-In the (Fig.7), the circle size of the term clusters visualize the frequency
+In the (Figure~\ref{fig:Completed dataset}), the circle size of the term clusters visualize the frequency
 of the terms appearing in the documents.
 
 \subsection{Spatial Data Mining and Visualization}
