--- a/main.tex
+++ b/main.tex
@@ -16,57 +16,41 @@
 
 \title{Machine Learning-based Spatial Modeling of Sentiment Towards COVID-19}
 
-\author{\IEEEauthorblockN{Yangxiao Bai, Abir Mohammad Hadi, Youngsun Jang, Kaiqun Fu}
+\author{\IEEEauthorblockN{Yangxiao Bai, Abir Mohammad Hadi, Youngsun Jang, Kwanghee Won, Kaiqun Fu}
 \IEEEauthorblockA{\textit{Department of Electrical Engineering and Computer Science} \\
 \textit{South Dakota State University}\\
 Brookings, South Dakota\\
-\{bai.yangxiao,abirmohammad.hadi,youngsun.jang,kaiqun.fu\}@sdstate.edu}
+\{bai.yangxiao,abirmohammad.hadi,youngsun.jang,kwanghee.won,kaiqun.fu\}@sdstate.edu}
 }
 
 \maketitle
 
-\begin{abstract}
-A variety of efforts have continued over the past two years to cope with the
-COVID-19 pandemic. There has been announced an unprecedented rapid vaccine
-development, quarantine measures, and economic revival plans by governments,
-etc. It will contribute to a more efficient pandemic response to figure out
-precisely people's opinions on these measures. This study explores the
-possibility of developing a Deep Learning-based system for such a public
-sentiment analysis of epidemic-related issues. It is required to utilize some
-methods to effectively collect data containing the public opinion to meet
-this purpose, and recent advances in machine learning technology have led to
-active research utilizing this. In particular, the daily use of social
-network services has enabled the researcher to analyze users' emotions using
-such advanced technology. Many studies have been conducted in this regard,
-but there are relatively few studies focused on the pandemic, and very few
-studies have examined dynamic changes over time in specific regions.
-Accordingly, our research team conducted a dynamic analysis on sentiment of
-Twitter users processing the spatiotemporal data mining. A key part of
-spatiotemporal data mining is securing geospatial, temporal, and sentiment
-score data from Twitter, which was solved by utilizing IEEE DataPort's
-CORONAVIRUS (COVID-19) GEO-TAGED TWEETS DATASET. The Elasticsearch server was
-used to perform querying task to refine the data. Furthermore, by configuring
-code that can visualize this, we demonstrate the possibility of automatic
-data mining and visualization API production in the future. In addition, we
-developed a binary classifier capable of predicting positive and negative
-emotion classifications of the public by using the decision tree technique of
-machine learning with already pre-labeled sentiment score data as input. This
-makes it possible to have a dynamic visibility of public sentiment changes on
-Covid-related issues by location and time zone. In the long run, this study
-plans to conduct sub-topic clustering of Covid-19 Twitter dataset based on
-Transfomer which stands on the attention mechanism in the Natural Language
-Processin. By analyzing the correlation between the predicted sentiment score
-data and the result of sub-topic clustering, we combine spatio-temporal data
-mining and deep neural networks. Eventually, this study will contribute to
-the better understanding of how sentiments of people change over time along
-with detailed topics of pandemic, by different location.
-\end{abstract}
+\begin{abstract} 
+Diverse efforts to combat the COVID-19 pandemic have continued throughout the
+past two years. Governments have announced plans for unprecedentedly rapid
+vaccine development, quarantine measures, and economic revitalization. They
+contribute to a more effective pandemic response by determining the precise
+opinions of individuals regarding these mitigation measures. In this paper,
+we propose a deep learning-based topic monitoring and storyline extraction
+system for COVID-19 that is capable of analyzing public sentiment and
+pandemic trends. The proposed method is able to retrieve Twitter data related
+to COVID-19 and conduct spatiotemporal analysis. In addition to
+spatiotemporal data mining, the system implements a sentiment analysis on
+Twitter users. Furthermore, a deep learning component of the system provides
+monitoring and modeling capabilities for topics based on the most advanced
+natural language processing models. The proposed system includes a
+user-interactive visualization component that provides audience monitoring
+and analytical toolboxes. Case studies found in abundance in our proposed
+system can justify empirical analysis. Ultimately, we believe that our
+proposed system accurately reflects how public sentiments change over time
+and locations, along with specific pandemic topics. 
+ \end{abstract}
 \begin{IEEEkeywords}
-pandemic, twitter, sentiment, topic clustering, transformer
+social media analysis, pandemic, topic modeling, storyline generation
 \end{IEEEkeywords}
 
 \input{sections/introduction}
-\input{sections/related}
+% \input{sections/related}
 \input{sections/method}
 \input{sections/experiment}
 \input{sections/discussion}
